smaller font for small screen, fixed overflow

--- a/css/creative.css
+++ b/css/creative.css
@@ -77,7 +77,7 @@ section {
 
 @media (min-width: 992px) {
   section {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   }
 }
@@ -295,7 +295,7 @@ header.masthead p {
 
 @media (min-width: 768px) {
   header.masthead p {
-    font-size: 1.85rem;
+    font-size: 1.6rem;
   }
 }
 
